third_party/move/move-compiler-v2/tests/bytecode-generator/bug_16222_fv_wrapper_unpack_failure.exp
// -- Model dump before first bytecode pipeline
module 0xc0ffee::m {
    struct Lazy {
        0: || has drop,
    }
    public fun make_lazy(): Lazy {
        pack m::Lazy(closure#0m::__lambda__1__make_lazy())
    }
    private fun __lambda__1__make_lazy() {
        Tuple()
    }
} // end 0xc0ffee::m
module 0xc0ffee::m_friend {
    struct Lazy {
        0: || has drop,
    }
    public fun make_lazy(): Lazy {
        pack m_friend::Lazy(closure#0m_friend::__lambda__1__make_lazy())
    }
    private fun __lambda__1__make_lazy() {
        Tuple()
    }
} // end 0xc0ffee::m_friend
module 0xc0ffee::n {
    public fun test_friend() {
        {
          let l: m_friend::Lazy = m_friend::make_lazy();
          (l)();
          Tuple()
        }
    }
} // end 0xc0ffee::n
module 0xc0ffee1::n {
    public fun test() {
        {
          let l: 0xc0ffee::m::Lazy = m::make_lazy();
          (l)();
          Tuple()
        }
    }
} // end 0xc0ffee1::n

// -- Sourcified model before first bytecode pipeline
module 0xc0ffee::m {
    struct Lazy has drop {
        0: || has drop,
    }
    public fun make_lazy(): Lazy {
        Lazy(|| lambda__1__make_lazy())
    }
    fun lambda__1__make_lazy() {
    }
}
module 0xc0ffee::m_friend {
    struct Lazy has drop {
        0: || has drop,
    }
    public fun make_lazy(): Lazy {
        Lazy(|| lambda__1__make_lazy())
    }
    fun lambda__1__make_lazy() {
    }
}
module 0xc0ffee::n {
    public fun test_friend() {
        let l = 0xc0ffee::m_friend::make_lazy();
        l();
    }
}
module 0xc0ffee1::n {
    public fun test() {
        let l = 0xc0ffee::m::make_lazy();
        l();
    }
}


Diagnostics:
error: cannot implicitly unpack a wrapper struct `m_friend::Lazy` defined in a different module `0xc0ffee::m_friend` and invoke the wrapped function value because it has friend visibility
   ┌─ tests/bytecode-generator/bug_16222_fv_wrapper_unpack_failure.move:22:9
   │
22 │         l();
   │         ^^^

error: cannot implicitly unpack a wrapper struct `m::Lazy` defined in a different module `0xc0ffee::m` and invoke the wrapped function value because it has package visibility
   ┌─ tests/bytecode-generator/bug_16222_fv_wrapper_unpack_failure.move:29:9
   │
29 │         l();
   │         ^^^
